# project-chimera

./: .coderabbit.yaml  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  PULL_REQUEST.md  README.md  SOUL.md  SRS_Project_Chimera.md  docker-compose.yml  main.py  pyproject.toml
.cursor/rules/: agent.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: main.yml
docs/: HITL_GUIDELINES.md  Project_Chimera_SRS_Report.md
project_chimera.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
research/: architecture_strategy.md
scripts/: convert_srs_to_pdf.py  generate_srs_pdf.py  generate_srs_pdf_reportlab.py  run_push_hitl.py  spec_check.py
skills/: commerce_manager.py  db_adapter.py  db_postgres.py  persona.py
skills/skill_email_sender/: SKILL.md  __init__.py  logic.py
skills/skill_media_generator/: SKILL.md  logic.py
skills/skill_onchain_payment/: SKILL.md  logic.py
skills/skill_trend_fetcher/: SKILL.md  logic.py
specs/: _meta.md  functional.md  technical.md
specs/schemas/: agent_task.json  mcp_tool.json  media_generator.json  payment_processor.json  trend_fetcher.json
tests/: test_cfo_governance.py  test_commerce_manager.py  test_db_integration.py  test_email_skill.py  test_integration_flow.py  test_integration_mcp_db.py  test_persona.py  test_skills_empty_slots.py  test_skills_interface.py  test_trend_fetcher.py
