[project]
name = "project-chimera"
version = "0.1.0"
description = "Autonomous Influencer Network governed by MCP and Swarm Architecture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=0.1.0",
    "pydantic-ai>=0.0.1",
    "weaviate-client",
    "coinbase-agentkit",
    "redis",
    "pydantic>=2.0.0",
    "loguru",
    "jsonschema>=4.0.0",
]

# This is the modern 'uv' way to handle dev dependencies
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio",
    "black",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]