[project]
name = "project-chimera"
version = "0.1.0"
description = "Autonomous Influencer Network governed by MCP and Swarm Architecture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=0.1.0",
    "pydantic-ai>=0.0.1",
    "weaviate-client",
    "coinbase-agentkit",
    "redis",
    "psycopg2-binary",
    "pydantic>=2.0.0",
    "loguru",
    "jsonschema>=4.0.0",
]

[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["skills*"]

# This is the modern 'uv' way to handle dev dependencies
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio",
    "black",
    "ruff",
]

[project.optional-dependencies]
dev = [
    "psycopg2-binary>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]